- Fixed bug #44246 (closedir() accepts a file resource opened by fopen())