ext/standard/file.c
@@ -21,7 +21,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: file.c,v 1.520 2008/07/11 10:24:29 tony2001 Exp $ */
+/* $Id: file.c,v 1.521 2008/07/22 14:06:16 felipe Exp $ */
 
 /* Synced with php 3.0 revision 1.218 1999-06-16 [ssb] */
 
@@ -965,6 +965,8 @@ PHP_NAMED_FUNCTION(php_if_tmpfile)
 	stream = php_stream_fopen_tmpfile();
 
 	if (stream) {
+		stream->flags |= PHP_STREAM_FLAG_FCLOSE;
+
 		php_stream_to_zval(stream, return_value);
 	} else {
 		RETURN_FALSE;
@@ -998,6 +1000,8 @@ PHP_NAMED_FUNCTION(php_if_fopen)
 	if (stream == NULL) {
 		RETURN_FALSE;
 	}
+	
+	stream->flags |= PHP_STREAM_FLAG_FCLOSE;
 
 	php_stream_to_zval(stream, return_value);
 }
@@ -1015,6 +1019,12 @@ PHPAPI PHP_FUNCTION(fclose)
 	}
 
 	PHP_STREAM_TO_ZVAL(stream, arg1);
+	
+	if (!(stream->flags & PHP_STREAM_FLAG_FCLOSE)) {
+		php_error_docref(NULL TSRMLS_CC, E_WARNING, "%d is not a valid stream resource", stream->rsrc_id);
+		RETURN_FALSE;
+	}
+	
 	if (!stream->is_persistent) {
 		zend_list_delete(stream->rsrc_id);
 	} else {
