main/php_streams.h
@@ -16,7 +16,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: php_streams.h,v 1.135 2008/06/11 09:01:44 dmitry Exp $ */
+/* $Id: php_streams.h,v 1.136 2008/07/22 14:06:17 felipe Exp $ */
 
 #ifndef PHP_STREAMS_H
 #define PHP_STREAMS_H
@@ -190,6 +190,8 @@ struct _php_stream_wrapper	{
 #define PHP_STREAM_FLAG_NO_CLOSE					32
 	
 #define PHP_STREAM_FLAG_IS_DIR						64
+
+#define PHP_STREAM_FLAG_FCLOSE						128
 
 struct _php_stream  {
 	php_stream_ops *ops;
