sapi/cli/php_cli.c
@@ -20,7 +20,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: php_cli.c,v 1.189 2008/03/26 14:46:17 scottmac Exp $ */
+/* $Id: php_cli.c,v 1.190 2008/07/22 14:06:17 felipe Exp $ */
 
 #include "php.h"
 #include "php_globals.h"
@@ -516,6 +516,10 @@ static void cli_register_file_handles(TSRMLS_D) /* {{{ */
 		if (s_err) php_stream_close(s_err);
 		return;
 	}
+	
+	s_in->flags  |= PHP_STREAM_FLAG_FCLOSE;
+	s_out->flags |= PHP_STREAM_FLAG_FCLOSE;
+	s_err->flags |= PHP_STREAM_FLAG_FCLOSE;
 
 #if PHP_DEBUG
 	/* do not close stdout and stderr */
